added php email form with captcha validation

--- a/index.html
+++ b/index.html
@@ -8,19 +8,24 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://www.google.com/recaptcha/api.js"></script>
     <style>
         body {
-            font-size: 15px;
             line-height: 1.8;
             color: #818181;
             font-family: Montserrat, sans-serif;
         }
+        .container-fluid {
+            padding: 0;
+        }
+        .row {
+            margin: 0;
+        }
         h1 {
-            font-size: 60px;
+            font-size: 4.2rem;
         }
         h2 {
-            font-size: 30px;
-            #text-transform: uppercase;
+            font-size: 2.5rem;
             color: #ff4900;
             font-weight: 600;
             margin-bottom: 30px;
@@ -36,15 +41,17 @@
             color: #fff;
             background: url("bgimage.jpg") center no-repeat;
             background-size: cover;
-            height: 66vh;
+            height: 70vh;
             width: 100%;
             display: flex;
         }
         #topHeader {
             position: absolute;
-            margin: auto;
-            top: 29vh;
-            left: 8vw;
+            margin-top: 40vh;
+            left: 5.75vw;
+        }
+        .navbar-header > .logo {
+            padding-left: 4.75vw;
         }
         #about {
             background: #1BA66A;
@@ -57,12 +64,19 @@
         }
         .pricingLeft {
             background-color: #22679C;
-            padding: 40px 100px;
+            padding: 2vh 6vw;
+        }
+        .pricingLeft h4 {
+            margin-top: -2vh;
         }
         .pricingRight {
             background: #1BA66A;
             color: white;
             font-size: 1em;
+        }
+        .pricingRight a, #contact a {
+            list-style-type: none;
+            color: #fff;
         }
         #activeLife {
             background: url("bgimage2.jpg") center no-repeat;
@@ -82,22 +96,11 @@
             background-color: #1BA66A;
             color: white;
         }
+        .form-group {
+            padding: 2vh 0 0 .25vh;
+        }
         .section {
-            padding: 60px 50px;
-        }
-        .logo {
-            position: absolute;
-            left: 8vw;
-            top: 4vh;
-        }
-        .logo-small {
-            color: #ff4900;
-            font-size: 50px;
-        }
-        .thumbnail img {
-            width: 100%;
-            height: 100%;
-            margin-bottom: 10px;
+            padding: 2vh 6vw;
         }
         .item h4 {
             font-size: 17px;
@@ -121,9 +124,12 @@
         .navbar-default{
             background: none;
         }
-        .navbar li a, .navbar .navbar-brand {
+        .navbar-toggle {
+            float: left;
+        }
+        .navbar li a {
             color: #fff !important;
-            font-size: .9vw;
+            font-size: 1.5rem;
         }
         .navbar-nav li a:hover, .navbar-nav li.active a {
             color: #ff4900 !important;
@@ -132,14 +138,11 @@
             border-color: transparent;
             color: #ff4900 !important;
         }
-        .navbar-collapse{
-            width: 86vw;
-            padding-top: 5vh;
+        .navbar-default .container {
+            padding-top: 2vh;
         }
-        footer > .glyphicon {
-            font-size: 20px;
-            margin-bottom: 20px;
-            color: #ff4900;
+        .navbar-collapse{
+            width: 92.5vw;
         }
         .slideanim {visibility:hidden;}
         .slide {
@@ -174,20 +177,27 @@
                 display: table-cell;
                 float: none !important;
             }
+            .navbar-right {
+                padding-top: 2vh;
+            }
         }
         @media screen and (max-width: 768px) {
+            #topHeader {
+                position: absolute;
+                margin-top: 40vh;
+                left: 2.75vw;
+            }
+            .section {
+                padding: 2vh 3vw;
+            }
             .col-sm-4 {
                 text-align: center;
-                margin: 25px 0;
             }
-            .btn-lg {
-                width: 100%;
-                margin-bottom: 35px;
+            .navbar-default .container {
+                padding-top: 0;
             }
-        }
-        @media screen and (max-width: 480px) {
-            .logo {
-                font-size: 150px;
+            .navbar-header > .logo {
+                padding: 0.2em;
             }
         }
     </style>
@@ -204,7 +214,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#article"><img class="logo" src="logo.png"></a>
+                <div class="logo"><img src="logo.png"></div>
             </div>
             <div class="collapse navbar-collapse" id="collapseNav">
                 <ul class="nav navbar-nav navbar-right">
@@ -233,9 +243,9 @@
             </div>
             <div class="col-sm-4 col-sm-height pricingRight">
                 <h1>$89 Special</h1><br>
-                <p>Consultation including 4 Chiropractic Adjustments.</p>
-                <p>Call to make an appointment today!</p>
-                <p><span class="glyphicon glyphicon-phone"></span>714.580.2498</p>
+                <h4>Consultation including 4 Chiropractic Adjustments.</h4>
+                <h4>Call to make an appointment today!</h4>
+                <h4><span class="glyphicon glyphicon-phone"></span><a href="tel:1-714-580-2498">714.580.2498</a></h4>
             </div>
         </div>
     </div>
@@ -251,7 +261,7 @@
             <h2>Routine chiropractic care is essential for an active lifestyle  </h2><br>
             <h4>Chiropractic adjustments can help improve your performance and recovery. A body in motion stays in motion and a body at rest stays at rest. At rest or in motion, your lifestyle choices impact the health and function of your joints. Chiropractic provides a safe, natural and drug-free option to locate, correct and prevent joint dysfunctions, thereby playing a vital role in keeping your body balanced, flexible and functioning at its best.</h4><br>
             <h4><strong>Why is chiropractic so important with an active lifestyle?</strong></h4>
-            <h4>Whether you do crossfit, mixed martial arts, runner, golfer or yoga, your spinal column is made up of 24 independent vertebrae that enable your body to move, twist and bend during activities. It also helps protect the delicate central nervous system that controls and coordinates every muscle, tissue and organ of the body. Subluxations of the spine, commonly known as joint dysfunctions, can negatively effect proper nerve communication from the brain to the body–often resulting in pain and discomfort.</h4><br>
+            <h4>Whether you do crossfit, mixed martial arts, runner, golfer or yoga, your spinal column is made up of 24 independent vertebrae that enable your body to move, twist and bend during activities. It also helps protect the delicate central nervous system that controls and coordinates every muscle, tissue and organ of the body. Subluxations of the spine, commonly known as joint dysfunctions, can negatively effect proper nerve communication from the brain to the body–often resulting in pain and discomfort.</h4>
         </div>
     </div>
 </div>
@@ -304,47 +314,7 @@
 <!-- Container (Testimonials Section) -->
 <div id="testimonials" class="container-fluid section text-center">
     <h2>Testimonials</h2>
-    <iframe width="720" height="340" src="https://www.youtube.com/embed/XWUX9FT_dFU" frameborder="0" allowfullscreen></iframe>
-    
-<!--
-    <h4>What we offer</h4>
-    <br>
-    <div class="row slideanim">
-        <div class="col-sm-4">
-            <span class="glyphicon glyphicon-off logo-small"></span>
-            <h4>POWER</h4>
-            <p>Lorem ipsum dolor sit amet..</p>
-        </div>
-        <div class="col-sm-4">
-            <span class="glyphicon glyphicon-heart logo-small"></span>
-            <h4>LOVE</h4>
-            <p>Lorem ipsum dolor sit amet..</p>
-        </div>
-        <div class="col-sm-4">
-            <span class="glyphicon glyphicon-lock logo-small"></span>
-            <h4>JOB DONE</h4>
-            <p>Lorem ipsum dolor sit amet..</p>
-        </div>
-    </div>
-    <br><br>
-    <div class="row slideanim">
-        <div class="col-sm-4">
-            <span class="glyphicon glyphicon-leaf logo-small"></span>
-            <h4>GREEN</h4>
-            <p>Lorem ipsum dolor sit amet..</p>
-        </div>
-        <div class="col-sm-4">
-            <span class="glyphicon glyphicon-certificate logo-small"></span>
-            <h4>CERTIFIED</h4>
-            <p>Lorem ipsum dolor sit amet..</p>
-        </div>
-        <div class="col-sm-4">
-            <span class="glyphicon glyphicon-wrench logo-small"></span>
-            <h4>HARD WORK</h4>
-            <p>Lorem ipsum dolor sit amet..</p>
-        </div>
-    </div>
--->
+    <iframe width="720" height="340" src="" frameborder="0" allowfullscreen></iframe>
 </div>
 
 <!-- Container (Contact Section) -->
@@ -354,10 +324,10 @@
         <div class="col-sm-5">
             <p>Contact us and we'll get back to you within 24 hours.</p>
             <p><span class="glyphicon glyphicon-map-marker"></span>Newport Beach, CA</p>
-            <p><span class="glyphicon glyphicon-phone"></span>714.580.2498</p>
-            <p><span class="glyphicon glyphicon-envelope"></span>BackInMotionOC@gmail.com</p>
+            <p><span class="glyphicon glyphicon-phone"></span><a href="tel:1-714-580-2498">714.580.2498</a></p>
+            <p><span class="glyphicon glyphicon-envelope"></span><a href="mailto:BackInMotionOC@gmail.com?Subject=RE:%20Schedule%20an%20appointment" target="_top">BackInMotionOC@gmail.com</a></p>
         </div>
-        <div class="col-sm-7 slideanim">
+        <form class="col-sm-7 slideanim" method="post" action="send_form_email.php".php" onsubmit="return checkForm(this);">
             <div class="row">
                 <div class="col-sm-6 form-group">
                     <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
@@ -366,32 +336,34 @@
                     <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
                 </div>
             </div>
-            <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea><br>
+            <textarea class="form-control" id="message" name="message" placeholder="Comment" rows="5"></textarea><br>
+            <div class="g-recaptcha" style="float: right;" data-sitekey="6LfwPC8UAAAAAHuwUwmzmWDmkiT_Fj-1BWW9PCPE"></div>
             <div class="row">
                 <div class="col-sm-12 form-group">
-                    <button class="btn btn-default pull-right" type="submit">Send</button>
+                    <button class="btn btn-primary pull-right" name="submit" type="submit" value="Send Message">Send</button>
                 </div>
             </div>
-        </div>
+        </form>
     </div>
 </div>
 
 <!-- Container (Google Maps Section) -->
-<div id="location" style="height:400px;width:100%;"></div>
-<script>
-    function googleMap() {
-        var myCenter = new google.maps.LatLng(33.6600346, -117.8672541);
-        var mapProp = {center:myCenter, zoom:14, scrollwheel:false, draggable:false, mapTypeId:google.maps.MapTypeId.ROADMAP};
-        var map = new google.maps.Map(document.getElementById("location"),mapProp);
-        var marker = new google.maps.Marker({
-        position: myCenter,
-        animation: google.maps.Animation.BOUNCE
-     });
-        marker.setMap(map);
-    }
-</script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGdhHOJ4l85nDgg6shOMIsHGQE9St5iFo&callback=googleMap"></script>
-
+<div class='container-fluid'>
+    <div id="location" style="height:400px;width:100%;"></div>
+        <script>
+            function googleMap() {
+                var myCenter = new google.maps.LatLng(33.6600346, -117.8672541);
+                var mapProp = {center:myCenter, zoom:14, scrollwheel:false, draggable:false, mapTypeId:google.maps.MapTypeId.ROADMAP};
+                var map = new google.maps.Map(document.getElementById("location"),mapProp);
+                var marker = new google.maps.Marker({
+                position: myCenter,
+                animation: google.maps.Animation.BOUNCE
+             });
+                marker.setMap(map);
+            }
+        </script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGdhHOJ4l85nDgg6shOMIsHGQE9St5iFo&callback=googleMap"></script>
+</div>
 <!-- Container (Footer Section) -->
 <footer class="container-fluid section text-center">
     <a href="#article" title="To Top">
