--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class="collapse navbar-collapse" id="collapseNav">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#about">About</a></li>
+                    <li><a href="#aboutMe">About</a></li>
                     <li><a href="#healthBenefits">Health Benefits</a></li>
                     <li><a href="#testimonials">Testimonials</a></li>
                     <li><a href="#contact">Contact</a></li>
